; ModuleID = '/home/carl/AnghaBench/redis/src/extr_t_set.c_qsortCompareSetsByCardinality.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_t_set.c_qsortCompareSetsByCardinality.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @qsortCompareSetsByCardinality(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to i32**
  %8 = load i32*, i32** %7, align 8
  %9 = call i64 @setTypeSize(i32* %8)
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to i32**
  %12 = load i32*, i32** %11, align 8
  %13 = call i64 @setTypeSize(i32* %12)
  %14 = icmp sgt i64 %9, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %28

16:                                               ; preds = %2
  %17 = load i8*, i8** %4, align 8
  %18 = bitcast i8* %17 to i32**
  %19 = load i32*, i32** %18, align 8
  %20 = call i64 @setTypeSize(i32* %19)
  %21 = load i8*, i8** %5, align 8
  %22 = bitcast i8* %21 to i32**
  %23 = load i32*, i32** %22, align 8
  %24 = call i64 @setTypeSize(i32* %23)
  %25 = icmp slt i64 %20, %24
  br i1 %25, label %26, label %27

26:                                               ; preds = %16
  store i32 -1, i32* %3, align 4
  br label %28

27:                                               ; preds = %16
  store i32 0, i32* %3, align 4
  br label %28

28:                                               ; preds = %27, %26, %15
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i64 @setTypeSize(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
